crates/musli/tests/ui/transparent_error.stderr
error: A #[musli(transparent)] attribute can only be used on structs which have a single field
 --> tests/ui/transparent_error.rs:4:9
  |
4 | #[musli(transparent)]
  |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on structs which have a single field
  --> tests/ui/transparent_error.rs:11:9
   |
11 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] struct must have a single field
  --> tests/ui/transparent_error.rs:15:9
   |
15 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] struct must have a single field
  --> tests/ui/transparent_error.rs:19:9
   |
19 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:24:13
   |
24 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:26:13
   |
26 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] variant must have a single field
  --> tests/ui/transparent_error.rs:28:13
   |
28 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] variant must have a single field
  --> tests/ui/transparent_error.rs:30:13
   |
30 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] or #[musli(packed)] struct cannot have named fields
  --> tests/ui/transparent_error.rs:37:13
   |
37 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(transparent)] or #[musli(packed)] variant cannot have named fields
  --> tests/ui/transparent_error.rs:45:21
   |
45 |     Variant(#[musli(name = "test")] String),
   |                     ^^^^

error: A #[musli(transparent)] struct cannot have an optional field
  --> tests/ui/transparent_error.rs:51:13
   |
51 |     #[musli(skip_encoding_if = String::is_empty)]
   |             ^^^^^^^^^^^^^^^^

error: A #[musli(transparent)] variant cannot have an optional field
  --> tests/ui/transparent_error.rs:59:17
   |
59 |         #[musli(skip_encoding_if = String::is_empty)]
   |                 ^^^^^^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on structs which have a single field
  --> tests/ui/transparent_error.rs:70:9
   |
70 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:80:13
   |
80 |     #[musli(transparent)]
   |             ^^^^^^^^^^^
